logs/interssection.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.5.2.egg-info'...
Listing './lib/python3.5/site-packages/feedparser-4.1.egg-info'...
Compiling './lib/python3.5/site-packages/feedparser.py'...
***   File "./lib/python3.5/site-packages/feedparser.py", line 236
    raise AttributeError, "object has no attribute '%s'" % key
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/interssection'...
Listing './lib/python3.5/site-packages/interssection/templates'...
Listing './lib/python3.5/site-packages/interssection-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/jinja2/_markupsafe'...
Listing './lib/python3.5/site-packages/jinja2/testsuite'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates'...
Listing './lib/python3.5/site-packages/jinja2/testsuite/res/templates/foo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
